dev in progress, drivers

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 /KVMeter.VC.db
+/.vs/KVMeter/v14
+/*.opendb
+/*.user
+/KVMeter/VisualGDB/Debug
+/KVMeter/VisualGDB/VisualGDBCache/KVMeter-Debug
+/VisualGDB/Debug/CodeDB/KVMeter.0001
+/VisualGDB/Debug/CodeDB/KVMeter
+/VisualGDB/Debug
