--- a/KVMeter/KVMeter.vcxproj.filters
+++ b/KVMeter/KVMeter.vcxproj.filters
@@ -29,11 +29,14 @@
     <Filter Include="Header files\Device-specific files\StdPeriph">
       <UniqueIdentifier>{88c270c4-8c59-4113-8e07-c3da43e428d2}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source files\drivers">
+      <UniqueIdentifier>{652d5004-2cd7-4278-9cd2-3c0bfc548aba}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header files\drivers">
+      <UniqueIdentifier>{159645d8-c9b8-43c2-8e18-31c9828b7cd8}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="C:\Users\Seth\AppData\Local\VisualGDB\EmbeddedBSPs\arm-eabi\com.sysprogs.arm.stm32\STM32F1xxxx\StartupFiles\startup_stm32f100xb.c">
-      <Filter>Source files\Device-specific files</Filter>
-    </ClCompile>
     <ClCompile Include="C:\Users\Seth\AppData\Local\VisualGDB\EmbeddedBSPs\arm-eabi\com.sysprogs.arm.stm32\STM32F1xxxx\STM32F10x_StdPeriph_Driver\src\misc.c">
       <Filter>Source files\Device-specific files\StdPeriph</Filter>
     </ClCompile>
@@ -111,6 +114,18 @@
     </ClCompile>
     <ClCompile Include="src\system_stm32f10x.c">
       <Filter>Source files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\drivers\src\delay.cpp">
+      <Filter>Source files\drivers</Filter>
+    </ClCompile>
+    <ClCompile Include="src\interrupts.cpp">
+      <Filter>Source files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\drivers\src\s6d0164.cpp">
+      <Filter>Source files\drivers</Filter>
+    </ClCompile>
+    <ClCompile Include="C:\Users\Seth\AppData\Local\VisualGDB\EmbeddedBSPs\arm-eabi\com.sysprogs.arm.stm32\STM32F1xxxx\StartupFiles\startup_stm32f103xb.c">
+      <Filter>Source files\Device-specific files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -202,6 +217,24 @@
     </ClInclude>
     <ClInclude Include="C:\Users\Seth\AppData\Local\VisualGDB\EmbeddedBSPs\arm-eabi\com.sysprogs.arm.stm32\STM32F1xxxx\CMSIS_StdPeriph\CM3\DeviceSupport\ST\STM32F10x\system_stm32f10x.h">
       <Filter>Header files\Device-specific files\StdPeriph</Filter>
+    </ClInclude>
+    <ClInclude Include="src\drivers\inc\delay.h">
+      <Filter>Header files\drivers</Filter>
+    </ClInclude>
+    <ClInclude Include="src\drivers\inc\fonts.h">
+      <Filter>Header files\drivers</Filter>
+    </ClInclude>
+    <ClInclude Include="src\interrupts.h">
+      <Filter>Header files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\objects.h">
+      <Filter>Header files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\periph_config.h">
+      <Filter>Header files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\drivers\inc\s6d0164.h">
+      <Filter>Header files\drivers</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
